[project]
name = "claude-code-publish"
version = "0.1"
description = "Convert a Claude Code for web session.json to HTML"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Simon Willison" }
]
requires-python = ">=3.10"
dependencies = [
    "click",
    "click-default-group",
    "markdown",
]

[project.urls]
Homepage = "https://github.com/simonw/claude-code-publish"
Changelog = "https://github.com/simonw/claude-code-publish/releases"
Issues = "https://github.com/simonw/claude-code-publish/issues"
CI = "https://github.com/simonw/claude-code-publish/actions"

[project.scripts]
claude-code-publish = "claude_code_publish:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "syrupy>=5.0.0",
]
