[project]
name = "claude-code-transcripts"
version = "0.5"
description = "Convert Claude Code session files to HTML transcripts"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Simon Willison" }
]
requires-python = ">=3.10"
dependencies = [
    "click",
    "click-default-group",
    "httpx",
    "jinja2",
    "markdown",
    "questionary",
]

[project.urls]
Homepage = "https://github.com/simonw/claude-code-transcripts"
Changelog = "https://github.com/simonw/claude-code-transcripts/releases"
Issues = "https://github.com/simonw/claude-code-transcripts/issues"
CI = "https://github.com/simonw/claude-code-transcripts/actions"

[project.scripts]
claude-code-transcripts = "claude_code_transcripts:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-httpx>=0.35.0",
    "syrupy>=5.0.0",
]
