[project]
name = "claude-code-transcripts"
version = "0.5"
description = "Convert Claude Code session files to HTML transcripts"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Simon Willison" }
]
requires-python = ">=3.10"
dependencies = [
    "click",
    "click-default-group",
    "httpx",
    "jinja2",
    "markdown",
    "questionary",
    "starlette>=0.46.0",
    "uvicorn>=0.34.0",
]

[project.urls]
Homepage = "https://github.com/simonw/claude-code-transcripts"
Changelog = "https://github.com/simonw/claude-code-transcripts/releases"
Issues = "https://github.com/simonw/claude-code-transcripts/issues"
CI = "https://github.com/simonw/claude-code-transcripts/actions"

[project.scripts]
claude-code-transcripts = "claude_code_transcripts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=9.0.2",
    "pytest-httpx>=0.35.0",
    "syrupy>=5.0.0",
]
